# BRDFViz

./: .gitignore  CMakeLists.txt  Makefile  README.md  cmake_install.cmake
cmake/: Findassimp.cmake
scenes/: bathroom.json  bedroom.json  box1.json  box2.json  box3.json  box4.json  box5.json  box6.json  box7.json  box8.json  buddha.json  coffee.json  conference.json  cornell-box-spheres.json  cornell-box.json  cube.json  cube1.json  cube3-b.json  cube3.json  cube4.json  cube_flat.json  dragon-sponza.json  floor.json  floor2.json  floor3.json  primitives1.json  rubiks-bump.json  rubiks.json  sibenik.json  sibenik2.json  sibenik3.json  sponza.json  sponza.rtc  sponza2.json  sponza3.json  sponza4.json  sponza4b.json  sponza4c.json  teapot.json  teapots.json
scenes/box1/: box1.mtl
scenes/box2/: box2.mtl
scenes/box3/: box3.mtl
scenes/box4/: box4.mtl
scenes/box5/: box5.mtl
scenes/box6/: box6.mtl
scenes/box7/: box1.mtl
scenes/box8/: box8.mtl
scenes/cornell-box/: CornellBox-Empty-RG.mtl  CornellBox-Sphere.mtl
scenes/cubes/: cube.mtl  cube1.mtl  cube2.mtl  cube3.mtl  cube4.mtl  cube_flat.mtl
scenes/envmap/: license.txt
scenes/floor/: floor.mtl
scenes/json/: sponza-global4.json
scenes/rubiks/: rubiks.mtl
scenes/rubiks-bump/: rubiks.mtl
scenes/rubiks-jpg/: rubiks.mtl
scenes/sibenik/: copyright.txt
src/: AboutMe.ui  CMakeCache.txt  CMakeLists.txt  HoradamGenerator.h  ImageDisplay.hpp  ImageGraphicsView.cpp  ImageGraphicsView.hpp  LRU.hpp  Makefile  OGLImageViewer.cpp  OGLImageViewer.hpp  VTKIncludes.hpp  VTKWindow.cpp  VTKWindow.hpp  VTKWindow.ui  brdf.cpp  brdf.hpp  camera.cpp  camera.hpp  cmake_install.cmake  config.cpp  config.hpp  frag.f  glm.cpp  glm.hpp  global_config.cpp  global_config.hpp  jsonutils.cpp  jsonutils.hpp  main.cpp  moc_HoradamGenerator.cpp_parameters  out.cpp  out.hpp  path_tracer.cpp  path_tracer.hpp  primitives.cpp  primitives.hpp  radiance.hpp  random_utils.hpp  ray.hpp  (+16 more)
src/LTC/: ltc.cpp  ltc.hpp  ltc_beckmann.cpp  ltc_ggx.cpp
src/bxdf/: bxdf.cpp  bxdf.hpp
src/src/: Makefile
